--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^19.0.0",
+    "react-aria-components": "^1.6.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
