--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.39.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
