--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.4",
     "@tanstack/react-table": "^8.21.2",
